@@ -26,7 +26,7 @@ $server->negotiate({server => 1});
 my $client = Mojo::IOLoop::TLS->new($client_sock);
 $client->once(upgrade => $delay->begin);
 $client->once(error => sub { warn pop });
-$client->negotiate;
+$client->negotiate(tls_verify => 0x00);
 my ($client_result, $server_result);
 $delay->on(finish => sub { (undef, $server_result, $client_result) = @_ });
 $delay->wait;
@@ -47,7 +47,7 @@ $server->negotiate(server => 1, tls_ciphers => 'AES256-SHA:ALL');
 $client = Mojo::IOLoop::TLS->new($client_sock2)->reactor($loop->reactor);
 $client->once(upgrade => $delay->begin);
 $client->once(error => sub { warn pop });
-$client->negotiate;
+$client->negotiate(tls_verify => 0x00);
 $client_result = $server_result = undef;
 $delay->on(finish => sub { (undef, $server_result, $client_result) = @_ });
 $delay->wait;
