@@ -12,6 +12,8 @@ plan skip_all => 'set TEST_ONLINE to enable this test (developer only!)'
   unless $ENV{TEST_ONLINE};
 plan skip_all => 'IO::Socket::SSL 1.94+ required for this test!'
   unless Mojo::IOLoop::TLS->can_tls;
+plan skip_all => 'Mozilla::CA required for this test!'
+  unless eval { require Mozilla::CA; 1 };
 
 use IO::Socket::INET;
 use Mojo::IOLoop;
