@@ -1,5 +1,17 @@
 
 7.80  2018-05-18
+  - Many users expected that Mojo::UserAgent would validate all TLS certificates
+    by default. So far that has not been the case, but will change with this
+    release in an effort to strengthen security. By default Mojo::UserAgent will
+    now reject all invalid TLS certificates. To return to the previous behavious
+    you can use the insecure attribute.
+      $ua->insecure(1);
+    That also means that Mojo::IOLoop::TLS will no longer have a default
+    tls_verify value. To disable TLS certificate validation there you can use
+    the value 0x00.
+      $tls->negotiate(tls_verify => 0x00);
+  - Added insecure attribute to Mojo::UserAgent.
+  - Added -k option to get command.
   - Fixed a bug where Mojo::DOM could only reuse Mojo::DOM objects containing
     root nodes.
 
